# Mandelbrot-Set

./: .gitignore  CMakeLists.txt  README.md  application.cpp  main.cpp  mandelbrot.cpp
shaders/: mandelbrot.frag  mandelbrot.vert
src/: main.cpp
